// Prisma schema for Ride Service
generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma-client"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum RideStatus {
  CREATED
  FINDING_DRIVER
  OFFERED
  ASSIGNED
  ACCEPTED
  PICKING_UP
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

model Ride {
  id            String      @id @default(uuid())
  customerId    String
  driverId      String?
  status        RideStatus  @default(CREATED)
  
  // Booking preferences
  vehicleType   String      @default("ECONOMY")    // ECONOMY, COMFORT, PREMIUM
  paymentMethod String      @default("CASH")       // CASH, CARD, WALLET
  voucherCode   String?
  
  // Pickup location
  pickupAddress String
  pickupLat     Float
  pickupLng     Float
  
  // Dropoff location
  dropoffAddress String
  dropoffLat     Float
  dropoffLng     Float
  
  // Ride details
  distance      Float?      // in kilometers
  duration      Int?        // in seconds
  fare          Float?
  surgeMultiplier Float     @default(1.0)
  
  // Suggested & assigned drivers
  suggestedDriverIds String[]  @default([])
  offeredDriverIds   String[]  @default([])  // Track drivers who were offered the ride
  rejectedDriverIds  String[]  @default([])  // Track drivers who rejected/timed out
  reassignAttempts   Int       @default(0)    // Count re-assignment attempts
  acceptedDriverId   String?
  
  // Timestamps
  requestedAt   DateTime    @default(now())
  pickupAt      DateTime?
  offeredAt     DateTime?   // When ride was offered to a driver
  assignedAt    DateTime?
  acceptedAt    DateTime?
  startedAt     DateTime?
  completedAt   DateTime?
  cancelledAt   DateTime?
  
  // Cancel info
  cancelReason  String?
  cancelledBy   String?     // 'CUSTOMER' | 'DRIVER' | 'SYSTEM'
  
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
  
  // Relations
  transitions   RideStateTransition[]
  messages      RideChatMessage[]
  
  @@index([customerId, createdAt(sort: Desc)])
  @@index([driverId, createdAt(sort: Desc)])
  @@index([status])
  @@index([voucherCode])
}

model RideChatMessage {
  id         String   @id @default(uuid())
  rideId      String
  ride        Ride     @relation(fields: [rideId], references: [id], onDelete: Cascade)
  senderId    String
  senderRole  String
  type        String   @default("TEXT")
  message     String
  createdAt   DateTime @default(now())

  @@index([rideId, createdAt])
  @@index([senderId, createdAt(sort: Desc)])
}

model RideStateTransition {
  id          String      @id @default(uuid())
  rideId      String
  ride        Ride        @relation(fields: [rideId], references: [id])
  
  fromStatus  RideStatus?
  toStatus    RideStatus
  actorId     String?     // userId who triggered
  actorType   String?     // 'CUSTOMER' | 'DRIVER' | 'SYSTEM'
  reason      String?
  
  occurredAt  DateTime    @default(now())
  
  @@index([rideId, occurredAt])
}
